--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ width:50%;
     justify-content: space-between;
     width:50%;
     flex-wrap: wrap;
-    margin-right: 20%;
+    margin: 0 auto ;
 }
 
 .flex{
@@ -160,10 +160,14 @@ width:50%;
 @media screen and (max-width: 1000px){
     .extras {
         flex-direction: column;
+        justify-content: center;
+        width:100%;
     }
 
     section{
         margin:5%;
+        align-items:center;
+        justify-items: center;
     }
 
 
@@ -173,7 +177,7 @@ width:50%;
     }
     .bar{
         width:60%;
-        margin:auto;
+        margin: 0 auto;
     }
 
    h2, p{
