--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ p, .sub{
     font-weight:bold;
     font-size:1rem;
     white-space:nowrap;
+    text-align: center;
 }
 
 section{
@@ -131,26 +132,35 @@ width:50%;
     margin:0;
 }
 
-.extras{
+/*.extras{
     display:flex;
     align-items: center;
     justify-content: space-between;
-    width:50%;
+    min-width:200px;
+    max-width: 50%;
+    width:100%;
     flex-wrap: wrap;
     margin: 0 auto ;
+}*/
+
+.extras{
+    width:75%;
+    max-width:70%;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:space-between;
+    margin: 0 auto;
+    min-width:200px;
 }
+
 
 .flex{
     display:flex;
+    flex: wrap;
     align-items: center;
     justify-content:space-between;
-    width:20%;
+   
 }
-
-.flex img{
-    color:white;
-}
-
 
 .flex p{
     margin-left:5%;
@@ -158,18 +168,23 @@ width:50%;
 
 
 @media screen and (max-width: 1000px){
-    .extras {
-        flex-direction: column;
-        justify-content: center;
+   /*.extras {
         width:100%;
-    }
+        justify-content:space-between;
+    }*/
+
 
     section{
-        margin:5%;
+        margin:10%;
         align-items:center;
-        justify-items: center;
     }
 
+    .flex{
+       justify-content:center;
+       align-items: center;
+       text-align: center;
+       margin:0 auto;
+    }
 
     .space{
         width:100%;
@@ -183,7 +198,7 @@ width:50%;
    h2, p{
     font-size: 1rem;
    }
-   .center-image{
+   #center-image{
         width:40%;
         height:40%;
     }
